--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ linkedin_username: ash-jankay
 use_math: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: UA-158677010-1
+# google_analytics: UA-158677010-1
 
 # Everything below here can be ignored, unless you want to change the theme entirely
 theme: jekyll-theme-minimal
