--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ use_math: true
 # Everything below here can be ignored, unless you want to change the theme entirely
 theme: jekyll-theme-minimal
 plugins:
-  - jekyll-feed
+  # - jekyll-feed
   - jekyll-gist
   - jekyll-octicons
   - jekyll-github-metadata
